--- a/swagger-demo/src/main/resources/application.properties
+++ b/swagger-demo/src/main/resources/application.properties
@@ -3,4 +3,9 @@ spring.application.name=swagger-demo
 # 应用服务 WEB 访问端口
 server.port=8080
 
-
+# 自定义swagger配置
+swagger.enable: true
+swagger.application-name: ${spring.application.name}
+swagger.application-version: 1.0
+swagger.application-description: springfox swagger 3.0整合Demo
+swagger.try-host: http://localhost:${server.port}
